2016-03-21	Tweaks.

		bin/biting-pear-c++.ccc :
		- `-Xbiting-pear -doge' now invokes biting-pear-c++
		  recursively, and passes -v to recursive subprocesses

		share/biting-pear/doge-1.ccc :
		- share/biting-pear/doge.cc ~> share/biting-pear/doge.ccc
		- added confusion

		GNUmakefile :
		- share/biting-pear/doge.cc ~> share/biting-pear/doge.ccc

2016-03-15	Beefed up on the documentation a bit.

		README.md :
		- added `-Xbiting-pear -doge' option for `biting-pear-c++'
		- added `--target-dir=...' option for `configure'
		- corrected C++ usage to use `#include <...>', not `#include
		  "..."'

2016-03-13	ELF/ARM assembly tweak.

		include/biting-pear/lolwut.h :
		- ELF/ARM code now uses `.subsection ...' and `.previous'
		  instead of `.pushsection ...' and `.popsection' to emit
		  relocated constants, to allow these constants to appear in
		  text sections other than `.text'

		GNUmakefile :
		- minor debugging patch

2016-03-12	Now implements `-Xbiting-pear -doge'!

		GNUmakefile :
		- got `-Xbiting-pear -doge' working
		- added test-doge test case

		bin/biting-pear-c++.ccc :
		- got `-Xbiting-pear -doge' working

		include/biting-pear/doge.h ,
		share/biting-pear/doge-1.cc ,
		share/biting-pear/doge-2.cc ,
		share/biting-pear/doge-8.cc ,
		share/biting-pear/doge-9.cc ,
		test/test-doge.ccc ,
		test/test-doge.good :
		- initial version

		configure :
		- added check for __attribute__((constructor(.))) support
		- turned off check for overridable __libc_csu_init(...)

		lolwutconf/c++.target.inc :
		- added conf_cxxt_probe_ctor_priority()

		share/biting-pear/epic.ccc :
		- fixed curious(.) to call lstat(...) instead of stat(...)

		.gitignore :
		- added test-doge

2016-03-08	Squirrel!  (2)

		configure ,
		lolwutconf/c++.target.inc :
		- now tries to detect if target compiler produces shared or
		  static executables

		GNUmakefile :
		- now defines biting_pear_DYN_LD_CXX_TARGET macro for
		  host-side C++ files